[gd_scene load_steps=7 format=2]

[ext_resource path="res://Art/sprite_sheet.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Enemy.gd" type="Script" id=2]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( -8, -8, -8, 8, 8, 8, 8, -8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 5.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 8 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )
hframes = 6
frame = 4

[node name="LightOccluder2D" type="LightOccluder2D" parent="Sprite"]
occluder = SubResource( 1 )

[node name="FloorChecker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 10 )

[node name="TopChecker" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopChecker"]
position = Vector2( 0, -7 )
shape = SubResource( 2 )

[node name="SideChecker" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SideChecker"]
position = Vector2( 0, 0.5 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.75, 0.75 )
shape = SubResource( 4 )

[connection signal="body_entered" from="TopChecker" to="." method="_on_TopChecker_body_entered"]
[connection signal="body_entered" from="SideChecker" to="." method="_on_SideChecker_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
